<resources>
    <string name="app_name">Jhansi Cab Booking</string>
    <string name="topic_name">JhansiCabBooking</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mobile_number_s">Mobile Number*</string>
    <string name="name_s">Name*</string>
    <string name="name">Name</string>
    <string name="email_id">Email ID</string>
    <string name="address">Address</string>
    <string name="popular_places">Popular Places</string>
    <string name="Login">Login</string>
    <string name="Signup">Signup</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_here">Enter here</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_valid_name">Please enter valid name</string>
    <string name="enter_valid_mobile">Please enter valid mobile number</string>
    <string name="enter_valid_email">Please enter valid email id</string>
    <string name="i_agree_check">Please accept Terms &amp; Conditions and Privacy Policy</string>
    <string name="check_internet"><![CDATA[Check your internet connection & try again !]]></string>
    <string name="otp_verification">OTP\nVerification</string>
    <string name="not_to_share_otp">Keep Your OTP Confidential</string>
    <string name="verify_here">Verify OTP</string>
    <string name="submit">Submit</string>
    <string name="share">Share</string>
    <string name="register">Register</string>
    <string name="time_remaining">Time remaining : </string>
    <string name="resend">Request a new OTP</string>
    <string name="ready_to_begin">Ready to begin ? </string>
    <string name="join_here"> Join here</string>
    <string name="welcome_back">Welcome Back </string>
    <string name="login_here">Login here</string>
    <string name="OTP_Required">OTP Required</string>
    <string name="OTP_short">4 Digits OTP Required</string>
    <string name="OTP_wrong">Wrong OTP Entered</string>
    <string name="i_agree">I agree to the Terms &amp; Conditions and Privacy Policy</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="outstation">Outstation</string>
    <string name="local">Local</string>
    <string name="search_destination">Search Destination</string>
    <string name="why_us">Why Us?</string>
    <string name="safe_rides">Safe Rides</string>
    <string name="certified_riders">Certified Riders</string>
    <string name="easy_payments">Easy Payments</string>
    <string name="searching_nearby">Searching for nearby available vechicle</string>
    <string name="available_rode_mate">Available Ride Mate</string>
    <string name="ride_mate">Ride Mate</string>
    <string name="estiamte_price">Estimate Price</string>
    <string name="price">Price</string>
    <string name="booking_confirmed">Booking Confirmed</string>
    <string name="ride_confirmed">Your ride is confirmed</string>
    <string name="Cancel_Ride">Cancel Ride</string>
    <string name="lets_go">Lets\'s go</string>
    <string name="payment">Payment</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="Upi">UPI</string>
    <string name="Credit_Card">Credit Card</string>
    <string name="Debit_Card">Debit Card</string>
    <string name="cash">Cash</string>
    <string name="wallet">Wallet</string>
    <string name="booking_date">Booking date : </string>
    <string name="return_date">Return date : </string>
    <string name="otp">OTP :</string>
    <string name="call_ride_mate">Call Ride Mate</string>
    <string name="call">Call</string>
    <string name="driver_live_location">Driver Live Location</string>
    <string name="vechicle_recommendation">Vechicle Recommendation</string>
    <string name="confirm_your_pickup">Confirm your pickup</string>
    <string name="confirmation">Confirmation</string>
    <string name="goback">Are You Sure You Want to Go Back</string>
    <string name="goback_cancle">Going back now will cancel your current trip permanently.</string>
    <string name="confirm_loc">Confirm Location</string>
    <string name="searching_nearby_vechicle">Searching for nearby available vechicle</string>
    <string name="searching">Searching...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="do_not_allow">Don\'t Allow</string>
    <string name="choose_return_time">Choose Return Time</string>
    <string name="select_return_date">Select Return Date</string>
    <string name="allow">Allow</string>
    <string name="leaving_so_soon">Leaving so soon ?</string>
    <string name="are_you_sure_you_want_to_close_this_app">Are you sure you want to close this application?</string>
    <string name="are_you_sure_you_want_to_logout_this_app">Are you sure you want to logout this application?</string>
    <string name="are_you_sure_you_want_to_cancle_ride">Do you really want to cancel the ride?</string>

    <string name="are_you_sure_you_want_to_delete_feedbck">Are you sure you want to delete feedback?</string>
    <!--    <string name="allow_google_map">Allow &quot; Google Maps&quot; to access location while you use the app?</string>-->
    <string name="allow_google_map">Allow "Google Maps" to access your location while you use the app?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="one_way">One-way</string>
    <string name="one_way_trip">One-way Trip</string>
    <string name="round_trip">Round trip</string>
    <string name="get_drop">Get dropped off</string>
    <string name="keep_the_car">Keep the car till return
    </string>
    <string name="permission_denied">Permission denied</string>
    <string name="permission_denied_location">Permission is required to obtain location</string>

    <string name="pickup_here">Pickup here</string>
    <string name="not_serve">Sorry, we do not currently serve in your selected location. Please choose a location within our service area.</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBHSCfIxqJMxTsVjox61dk4eKDL7tuxRfA</string>
    <string name="cannot_get_location">Cannot get your location</string>

    <string name="channel_arrived">Arrived</string>
    <string name="change_location">Change Location</string>
    <string name="your_QuestionsMatter_to_Us">Your Questions Matter to Us</string>
    <string name="MyEnquiry">My Enquiry</string>
    <string name="transactions">Transactions</string>
    <string name="refund">Refund</string>
    <string name="referral">Referral</string>
    <string name="enter_enquiry_here">Enter enquiry here</string>
    <string name="enter_reason_here">Enter reason here</string>
    <string name="channel_arrived_descrition">Driver notifications</string>
    <string name="could_not_login">Could not login</string>
    <string name="device_not_supported">This device is not supported</string>
    <string name="request_send">Request send</string>
    <string name="sent_failed">Sent failed</string>
    <string name="error_toast">Something went wrong ! try later</string>
    <string name="Update_Now">Update Now</string>
    <string name="Update">Update</string>
    <string name="a_new_version_of_the_app">A new version of the app is now available </string>
    <string name="update_Available">Update Available</string>
    <string name="update_Later">Update Later</string>
    <string name="No_Thanks">No Thanks</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms">Terms &amp; Conditions</string>
    <string name="my_booking">My Booking</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="how_can_we_assist_you">How can we assist you ?</string>
    <string name="chat_with_us">Chat with us</string>
    <string name="email_us">Email us</string>
    <string name="name_will_shown_to_driver">This name will be shown to the driver during ride pickup.</string>


    <string name="feedback">Feedback</string>
    <string name="we_value_your_feedback">We Value Your Feedback</string>
    <string name="help_us_improve_by">Help us improve by sharing your thoughts.</string>
    <string name="enquiryTitle">Enquire About Our Services</string>
    <string name="enquiryDEs">Tell us what you\'re looking for — we\'ll provide the right solution.</string>
    <string name="image_size_exceeds">Image size exceeds 2 MB. Please select a smaller image.</string>
    <string name="change_photo">Change Photo</string>
    <string name="upload_photo">Upload photo</string>
    <string name="choose_photo_to_upload">Choose photo to upload</string>
    <string name="photo_selected">Photo Selected</string>
    <string name="success">Success</string>
    <string name="my_profile">My Profile</string>
    <string name="get_invoice">Get invoice copy</string>
    <string name="choose_image_from_your_device_png_jpeg_jpg_etc">*choose image from your device (.png, .jpeg, .jpg etc)</string>
    <string name="trip_amount">Trip Amount : </string>
    <string name="waiting_charge">Waiting Charge : </string>
    <string name="night_halt_charge">Night Halt Charge : </string>
    <string name="extra_fare_charge">Extra Fare Charge : </string>
    <string name="rs_0">Rs.0</string>
    <string name="additional_charge_">Additional Charges : </string>
    <string name="additional_charge">Additional Charge</string>

    <!--    <string name="allow_google_map">Allow "\'Google Maps\'" to access your location while you use the app?</string>-->
</resources>