<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragement.PaymentFragment">
        <ScrollView
            android:fillViewport="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_map"
                android:src="@drawable/map_dummy"
                android:scaleType="fitXY"
                android:layout_width="match_parent"
                android:layout_height="200pt"/>
                <LinearLayout
                    android:layout_marginHorizontal="@dimen/space_8"
                    android:layout_marginTop="@dimen/space_8"
                    android:id="@+id/lin_ride"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textSize="@dimen/space_8"
                            style="@style/TextViewSemBold"
                            android:text="@string/estiamte_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:textSize="@dimen/space_8"
                            style="@style/TextViewSemBold"
                            android:layout_alignParentEnd="true"
                            android:text="Rs.0"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </RelativeLayout>
                    <TextView
                        android:layout_marginTop="@dimen/space_5"
                        android:text="@string/ride_mate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/rec_list"/>
                    <TextView
                        android:layout_marginTop="@dimen/space_5"
                        android:text="Confirm your pickup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <LinearLayout
                        android:id="@+id/lin_destination"
                        android:background="@drawable/bg_edittext"
                        android:gravity="center_vertical"
                        android:layout_gravity="center"
                        android:padding="@dimen/space_6"
                        android:layout_marginTop="@dimen/space_5"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edittext_height">
                        <ImageView
                            android:layout_marginLeft="@dimen/space_2"
                            android:src="@drawable/ic_location"
                            android:layout_width="8pt"
                            android:layout_height="8pt"/>
                        <TextView

                            android:textSize="@dimen/space_7"
                            android:layout_marginLeft="@dimen/space_8"
                            android:text="Address"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>
                    <TextView
                        android:layout_marginTop="@dimen/space_5"
                        style="@style/TextViewSemBold"
                        android:layout_alignParentEnd="true"
                        android:text="@string/payment_mode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <RadioButton
                            android:buttonTint="@color/green_500"
                            android:text="@string/Upi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <RadioButton
                            android:buttonTint="@color/green_500"
                            android:text="@string/Credit_Card"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <RadioButton
                            android:buttonTint="@color/green_500"
                            android:text="@string/Debit_Card"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <RadioButton
                            android:buttonTint="@color/green_500"
                            android:text="@string/cash"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </RadioGroup>
                    <LinearLayout
                        android:weightSum="2"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <Button
                            android:layout_weight="1"
                            android:layout_marginTop="@dimen/space_10"
                            android:text="@string/Cancel_Ride"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/button_height"/>
                        <Button
                            android:id="@+id/btn_pay"
                            android:layout_marginLeft="@dimen/space_8"
                            android:layout_weight="1"
                            android:layout_marginTop="@dimen/space_10"
                            android:text="@string/payment"
                            android:backgroundTint="@color/green_500"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/button_height"/>
                    </LinearLayout>

                </LinearLayout>

        </LinearLayout>
        </ScrollView>


    </RelativeLayout>
</layout>
