<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_5"
        app:cardCornerRadius="@dimen/card_radius"
        app:cardBackgroundColor="@color/white">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/cell_padding_vertical"
            android:paddingHorizontal="@dimen/space_10">
            <TextView
                android:id="@+id/tv_cancel"
                android:textSize="@dimen/space_9"
                android:text="@string/confirmation"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextViewExtraSemBold"/>
            <TextView
                android:id="@+id/tv_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/are_you_sure_you_want_to_cancle_ride"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/space_3"
                android:textSize="@dimen/space_5"
                android:layout_gravity="center"
                android:gravity="center" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="@dimen/space_5"
                android:orientation="horizontal">

                <Button
                    android:backgroundTint="@color/red_600"
                    android:id="@+id/btn_yes"
                    android:text="@string/yes"
                    android:layout_width="52pt"
                    android:layout_height="16pt"
                    style="@style/TextViewRegular"
                    android:textColor="@color/white"/>
                <Button
                    android:layout_marginStart="@dimen/space_8"
                    android:backgroundTint="@color/colorAccent"
                    android:id="@+id/btn_no"
                    android:text="@string/no"
                    android:layout_width="52pt"
                    android:layout_height="16pt"
                    style="@style/TextViewRegular"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>